Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.8.0
Description
The two failures may be unrelated, but they may be due to recent changes: IMPALA-3201: in-memory buffer pool implementation, https://github.com/apache/incubator-impala/commit/241c7e01978f180012453b0a4ff6d061ca6d5093
The previous run of the same job, http://sandbox.jenkins.sf.cloudera.com/view/Impala/view/Evergreen-asf-master/job/impala-asf-master-exhaustive-release/83/#showFailuresLink, also has the same failures. This tests revision 2a31fbdbfac9a7092c96e4ab9894e0db0e4ce9ca which includes
IMPALA-3201: in-memory buffer pool implementation
but not the later one, IMPALA-4118: extract encryption utils from BufferedBlockMgr
Revision tested in test run #84 was 757c68b29e21e64fc4586cdf24ee6f9369be460f, which includes the above change and https://github.com/apache/incubator-impala/commit/757c68b29e21e64fc4586cdf24ee6f9369be460f
Failures:
Failed: BufferPoolTest.PinWithoutReservation
Error Message
Value of: client_tracker->IncreaseReservationToFit(TEST_BUFFER_LEN) Actual: false Expected: true
Stacktrace
/data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/bufferpool/buffer-pool-test.cc:406 Value of: client_tracker->IncreaseReservationToFit(TEST_BUFFER_LEN) Actual: false Expected: true
Failed: BufferPoolTest.CapacityExhausted
Error Message
Failed Bad status: Buffer bytes limit 2048 of buffer pool is exhausted and page eviction is not implemented yet!
Stacktrace
/data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/bufferpool/buffer-pool-test.cc:540 Failed Bad status: Buffer bytes limit 2048 of buffer pool is exhausted and page eviction is not implemented yet!
The debug exhaustive build, http://sandbox.jenkins.sf.cloudera.com/view/Impala/view/Evergreen-asf-master/job/impala-asf-master-exhaustive/82/, worked and included the first change, so possibly this only fails with a release build.